# three-kingdoms-arena

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cc_repo_cleanup_prompt.txt  cc_single_game_prompt.txt  pyproject.toml  requirements.txt
agents/: __init__.py  llm_agent.py  prompts.py
app/: admin.py  config.py  database.py  engine.py  exceptions.py  limiter.py  lobby.py  lobby_routes.py  main.py  models.py  narrator.py  public.py
docs/: backlog.md  combat-rules.md  diplomacy-rules.md  rules.md
frontend/: INTEGRATION.md  extras.jsx  index.html  shared.jsx  site-extras.css  site.css  site.jsx  三国 Arena.html
frontend-v2/: index.html  package-lock.json  package.json  vite.config.js
homepage-handoff/: dragon.css  hero-battle.jsx  homepage.css  homepage.jsx  ink-landscape.css  ink-landscape.jsx
logs/: battle_20260506_175646.json
personas/: 刘备.md  孙权.md  曹操.md
scripts/: batch_test.py  cleanup_ghost_agents.py  llm_battle.py  migrate_logs.py  test_mock.py
static/: arena.jsx  extras.jsx  hero-map.jsx  index.html  lobby.jsx  shared.jsx  site.css  site.jsx
templates/: admin_battle_detail.html  admin_battles.html  admin_login.html  public_battle_detail.html  public_battles.html
tests/: test_agent_soft_delete.py  test_alliance_expire.py  test_battle_report.py  test_byoa_e2e.py  test_defense_visibility.py  test_diplomacy_mutex.py  test_error_codes.py  test_game.py  test_ip_restriction.py  test_lobby.py  test_managed_ai.py  test_managed_ai_personality.py  test_occupation_reward.py  (+3 more)
(+48 files in other folders)
