[project]
name = "three-kingdoms-arena"
version = "0.1.0"
description = "三国 AI Agent 竞技平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
